samples/_failures_safe/1761302826_cd9775_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7d77c653.c: In function ‘main’:
./samples/SAFE/__tmp_7d77c653.c:163:9: error: ‘depth_first’ undeclared (first use in this function)
  163 |         depth_first
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_7d77c653.c:163:9: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_7d77c653.c:164: error: expected ‘}’ at end of input
./samples/SAFE/__tmp_7d77c653.c:161:35: note: to match this ‘{’
  161 |     GraphOperation operations[] = {
      |                                   ^
./samples/SAFE/__tmp_7d77c653.c:163:9: error: expected declaration or statement at end of input
  163 |         depth_first
      |         ^~~~~~~~~~~
